Fix z-index with title

--- a/index.css
+++ b/index.css
@@ -13,9 +13,12 @@ body {
 }
 
 .background {
+    position: absolute;
+    left: 0px;
+    top: 0px;
     z-index: -1;
-    scale: 100%;
     height: 100%;
+    width: 100%;
 }
 
 .title {
